# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/riders": {
+        "/api/riders": {
             "get": {
                 "description": "gets all riders in the system",
                 "consumes": [
@@ -56,7 +56,7 @@
                 }
             }
         },
-        "/riders/{id}": {
+        "/api/riders/{id}": {
             "get": {
                 "description": "gets a rider from the system by its ID",
                 "produces": [
@@ -118,7 +118,7 @@
                 }
             }
         },
-        "/riders/{id}/location": {
+        "/api/riders/{id}/location": {
             "put": {
                 "description": "updates a rider's location",
                 "consumes": [
@@ -173,7 +173,7 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "location": {
                     "$ref": "#/definitions/domain.Location"
@@ -182,24 +182,18 @@
                     "type": "string"
                 },
                 "status": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
         "riderhdl.BodyCreate": {
             "type": "object",
             "properties": {
-                "latitude": {
-                    "type": "number"
-                },
-                "longitude": {
-                    "type": "number"
-                },
                 "name": {
                     "type": "string"
                 },
                 "status": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -210,7 +204,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -218,7 +212,7 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "location": {
                     "$ref": "#/definitions/domain.Location"
@@ -227,7 +221,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -235,7 +229,7 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "location": {
                     "$ref": "#/definitions/domain.Location"
@@ -244,7 +238,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         }
